[gd_scene load_steps=12 format=3 uid="uid://dy0aw7y2ufthq"]

[ext_resource type="Script" path="res://Scenes/Maps/Lines.gd" id="1_f0gbn"]
[ext_resource type="Script" path="res://Scenes/Maps/Map1.gd" id="1_lt8bn"]
[ext_resource type="PackedScene" uid="uid://cdnhsbc2bo7po" path="res://Scenes/MainScenes/Entities/Player.tscn" id="2_7nysv"]
[ext_resource type="PackedScene" uid="uid://cfchmv51ps335" path="res://Scenes/MainScenes/Entities/Ball.tscn" id="3_3c7w7"]
[ext_resource type="Script" path="res://Scenes/MainScenes/Entities/walls.gd" id="4_vmp4m"]
[ext_resource type="PackedScene" uid="uid://ckvgqp0or2qql" path="res://Scenes/UIScenes/UI.tscn" id="5_b43md"]
[ext_resource type="PackedScene" uid="uid://dtqjerman28dy" path="res://Scenes/MainScenes/Misc/GameSpeed.tscn" id="6_6weso"]
[ext_resource type="PackedScene" uid="uid://bu0nmgjp4b6ys" path="res://Scenes/MainScenes/Misc/PowerUp.tscn" id="8_polud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43atm"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uheyc"]
size = Vector2(28, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdsl1"]
size = Vector2(27.005, 720)

[node name="Map1" type="Node2D"]
script = ExtResource("1_lt8bn")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="Lines" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_f0gbn")

[node name="Left" parent="." instance=ExtResource("2_7nysv")]

[node name="Right" parent="." instance=ExtResource("2_7nysv")]

[node name="Ball" parent="." instance=ExtResource("3_3c7w7")]

[node name="Ceiling" type="Area2D" parent="."]
script = ExtResource("4_vmp4m")

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(640, -10)
shape = SubResource("RectangleShape2D_43atm")

[node name="Floor" type="Area2D" parent="."]
script = ExtResource("4_vmp4m")

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2(640, 730)
shape = SubResource("RectangleShape2D_43atm")

[node name="LeftWall" type="Area2D" parent="."]
script = ExtResource("4_vmp4m")

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-14, 360)
shape = SubResource("RectangleShape2D_uheyc")

[node name="RightWall" type="Area2D" parent="."]
script = ExtResource("4_vmp4m")

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1293.5, 360)
shape = SubResource("RectangleShape2D_rdsl1")

[node name="UI" parent="." instance=ExtResource("5_b43md")]

[node name="GameSpeed" parent="." instance=ExtResource("6_6weso")]

[node name="PowerUp" parent="." instance=ExtResource("8_polud")]

[connection signal="ball_reset" from="Ball" to="." method="_on_ball_ball_reset"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_side_wall_area_entered"]
[connection signal="update_score" from="LeftWall" to="UI" method="_on_left_wall_update_score"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_side_wall_area_entered"]
[connection signal="update_score" from="RightWall" to="UI" method="_on_right_wall_update_score"]
[connection signal="timeout" from="GameSpeed" to="." method="_on_game_speed_timeout"]
[connection signal="area_entered" from="PowerUp" to="." method="_on_power_up_area_entered"]
